[package]
name = "prometheus-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"]}
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1.19", features = ["full", "tracing"] }
tokio-stream = "0.1.11"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.12.0"
once_cell = "1.15"
regex = "1.6"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.2", features = ["serde", "v4"] }
redis = { version = "0.22.2", features = ["tls"] }
websocket = "0.26"
async-std = "1.12"
rand = "0.8.5"
