[package]
name = "prometheus-proxy-server"
version = "2.0.9"
edition = "2021"

[profile.release]
debug = true

[dependencies]
proc-macro2 = { version = "1.0.66", features = ["default", "proc-macro"] }
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1.19", features = ["full", "tracing"] }
tokio-stream = "0.1.11"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.12.0"
once_cell = "1.15"
regex = "1.6"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.2", features = ["serde", "v4"] }
redis = { version = "0.22.2", features = ["tls"] }
rand = "0.8.5"
sentry = "0.29.3"
